@@ -68,7 +68,7 @@ explanation what you can find in there.
 Sponsors
 --------
 All the work on the project is sponsored and supported by Cubox - an
-awesome dev shop from Uruguay <http://cuboxsa.com>.
+awesome dev shop from Uruguay <http://cuboxlabs.com>.
 
 Copyright
 ---------
