@@ -2,6 +2,6 @@ The `webrocket-server` tool
 ===========================
 
 This tool is used to start and initially configure single node instance.
-To further configure your node, use the *webrocket-admin* tool.
+To further configure your node, use the *webrocket-admin*(1) tool.
 
 Check manual pages for the *webrocket-server*(1) to get more information.
